--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .column-left {
-	flex: 45%;
+	flex: 10%;
 	height: 100%;
 	padding: 10px;
 	margin: 5px;
@@ -16,24 +16,19 @@ body {
 }
 
 .column-mid {
-	flex: 400%;
+	flex: 80%;
 	height: 100%;
 	padding: 10px;
 	margin: 5px;
+	justify-content: center;
 }
 
 .column-right {
-	flex: 45%;
+	flex: 10%;
 	height: 100%;
 	padding: 10px;
 	margin: 5px;
 	background-color: #cccccc;
-}
-
-.container {
-	display: flex;
-	justify-content: space-around;
-	align-items: stretch;
 }
 
 .plant {
@@ -50,70 +45,74 @@ body {
 	align-items: center;
 }
 
+.container {
+	display: flex;
+	justify-content: space-around;
+	align-items: stretch;
+}
+
+
+
 /* Terrarium */
 
 .jar-walls {
-	height: 80%;
+	display: flex;
+	flex-direction: column;
+	height: 80vh;
 	width: 60%;
 	background: #d1e1df;
 	border-radius: 1rem;
-	bottom: 0.5%;
-	left: 20%;
 	opacity: 0.5;
 	z-index: 1;
-	position: absolute;
+	justify-content: flex-end;
+	margin: 0 auto;
+	padding-left: 3%;
+	box-sizing: border-box;
 }
 
 .jar-top {
-	width: 50%;
-	height: 5%;
-	background: #d1e1df;
-	bottom: 80.5%;
-	left: 25%;
-	opacity: 0.7;
-	z-index: 1;
-	position: absolute;
+		width: 50%;
+		height: 5vh;
+		background: #d1e1df;
+		bottom: 80.5%;
+		margin-left: 25%;
+		opacity: 0.7;
+		z-index: 1;
 }
 
 .jar-bottom {
 	width: 50%;
-	height: 1%;
+	height: 1vh;
 	background: #d1e1df;
-	bottom: 0%;
-	left: 25%;
 	opacity: 0.7;
-	position: absolute;
+	margin: 0 auto;
 }
 
 .dirt {
 	width: 60%;
-	height: 5%;
+	height: 5vh;
 	background: #3a241d;
 	border-radius: 0 0 1rem 1rem;
 	bottom: 1%;
 	left: 20%;
 	opacity: 0.7;
 	z-index: -1;
-	position: absolute;
+	margin: 0 auto;
 }
 
 .jar-glossy-long {
 	width: 2.5%;
-	height: 30%;
+	height: 30vh;
 	background: #dff7fa;
 	border-radius: 1rem 1rem 1rem 1rem;
-	bottom: 20%;
-	left: 5%;
-	position: absolute;
+	margin-bottom: 5%;
 }
 
 .jar-glossy-short {
 	width: 2.5%;
-	height: 7%;
+	height: 7vh;
 	background: #dff7fa;
 	border-radius: 1rem 1rem 1rem 1rem;
-	bottom: 55%;
-	left: 5%;
-	position: absolute;
+	margin-bottom: 5%;
 }
 /* Terrarium END */
